# Paper-Radar

./: .gitignore  LICENSE  README.md  additional_info.md  docker-compose.yml
backend/: .env.example  .env.local.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  interactions.py  papers.py  recommendations.py  users.py  visualizations.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  intelligent_cache.py  logging.py  optimized_queries.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  paper.py  user.py
backend/app/schemas/: __init__.py  paper.py  user.py
backend/app/services/: __init__.py  arxiv_service.py  background_scheduler.py  embedding_service.py  enhanced_semantic_scholar_service.py  github_service.py  huggingface_service.py  ingestion_pipeline.py  llm_service.py  llm_service_enhanced.py  paper_relationship_3d.py  paper_submission_service.py  paper_topic_analysis_3d.py  ranking_engine.py  semantic_scholar_service.py  summary_generator.py
backend/scripts/: __init__.py  backfill_arxiv.py  calculate_ranking_scores.py  discover_implementations.py  enrich_semantic_scholar.py  generate_enhanced_summaries.py  generate_summaries.py  ingest_arxiv_daily.py  migrate_add_pros_cons.py  quick_fix.py  quick_test.py  quickstart.py  recalculate_rankings.py  reset_summaries.py  run_pipeline.py  setup_enhanced_features.py  test_all_features.py  test_insight_generation.py  test_services.py
frontend/: INSTALL_3D_DEPS.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/papers/: page.tsx
frontend/app/papers/[id]/: page.tsx
frontend/app/search/: page.tsx
frontend/app/trending/: page.tsx
frontend/components/: FilterSidebar.tsx  Navbar.tsx  PaperCard.tsx  PaperNetwork3D.tsx  PaperSubmitModal.tsx  PaperTopics3D.tsx  Visualization3DModal.tsx
frontend/stores/: index.ts
